# cleanwaterai

./: .gitignore  .gitignore_backup  README.md  environment.yml  main.py  prd.md  pyproject.toml  requirements.txt  runtime.txt  setup.py  severity_encoder.pkl
app/: cleanwatai_streamlit.py  index.css  streamlit_app.py  trigger_alerts.py  trigger_ingestion.py  trigger_predictions.py  trigger_reports.py
app/models/: nlp_pipeline.pkl
cleanwaterai.egg-info/: PKG-INFO  SOURCES.txt
data/processed/: environmental.csv  final_wpdx_environmental_data.csv  gems.csv  water_sanitation_clean.csv
data/raw/: ndvi_scaled.csv  water_sanitation.csv  water_sanitation_cleaned.csv
models/: environmental.pkl  gems_station_label_encoder.pkl  nlp_pipeline.pkl  station_label_encoder.pkl  water_quality_pipeline.pkl
notebooks/: 01_data_extraction.ipynb  02_data_cleaning.ipynb  03_data_merging.ipynb  04_data_preparation.ipynb  05_xgboost_model_training.ipynb  06_nlp_model_training.ipynb  07_model_evaluation.ipynb  08_model_interpretability.ipynb  09_deployment.ipynb  10_monitoring_and_maintenance.ipynb  Aluoch_nlp.ipynb  Diana-Xgb_model.ipynb  Improved_Aluoch_NLP_Project.ipynb  aluoch.ipynb  anthony.ipynb  diana.ipynb  lewis.ipynb  margaret.ipynb  train_isolation_forest.ipynb
notebooks/.ipynb_checkpoints/: 06_nlp_model_training-checkpoint.ipynb
scripts/: extract_data.py  extract_data_gems.py  train_isolation_forest.py  train_xgb.py
